--- a/docker-compose/docker-compose.init.yml
+++ b/docker-compose/docker-compose.init.yml
@@ -2,7 +2,7 @@ version: "3.4"
 
 services:
   init:
-    build: ./Fabmedical/content-init
+    build: ../content-init
     image: content-init
     depends_on:
        - mongo
